# xray-ci

./: Dockerfile  main.py
.github/workflows/: build.yml  container.yml
v2rayn/: Dockerfile  download_v2rayn.py  startapp.sh
xray/: Cargo.toml  Dockerfile  generate_config.py  run.sh
xray/src/: main.rs
